--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Lutally - Produção</h2>
         <form>
-            <label for="username">Usuário</label>
-            <input type="text" id="username" name="username" required>
+            <!-- <label for="username">Usuário</label> -->
+            <input type="text" id="username" name="username" placeholder="Usuário" required>
 
-            <label for="password">Senha</label>
+            <!-- <label for="password">Senha</label> -->
             <div class="password-container">
-                <input type="password" id="password" name="password" required>
-                <input type="checkbox" id="show-password" onclick="visibilidadeSenha()"> Visualizar senha
+                <input type="password" id="password" name="password" placeholder="Senha" required>
+                <input type="checkbox" id="show-password" onclick="visibilidadeSenha()"> 
             </div>
 
             <div class="remember-container">
