--- a/index.html
+++ b/index.html
@@ -3,32 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lutally</title>
+    <title>Painel ADM - Zutally</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-    <div class="login-container">
-        <h2>Lutally - Produção</h2>
-        <form>
-            <!-- <label for="username">Usuário</label> -->
-            <input type="text" id="username" name="username" placeholder="Usuário" required>
-
-            <!-- <label for="password">Senha</label> -->
-            <div class="password-container">
-                <input type="password" id="password" name="password" placeholder="Senha" required>
-                <input type="checkbox" id="show-password" onclick="visibilidadeSenha()"> 
+    <div class="caixa">
+        <form action="" id="login-form">
+            <!-- <img src="../imgs/logo.png" alt="logo"> -->
+             <h1 class="titulo">Lutally | <span> ADM</span></h1>
+            <div class="input-box">
+                <input type="text" id="username" placeholder="Usuário" required>
+                <input type="checkbox" id="mostrar-senha" onclick="mostrarSenha()">
+                <i class='bx bxs-user' ></i>
+            </div>
+            <div class="input-box">
+                <input type="password" id="password" placeholder="Senha" required>
+                <i class='bx bxs-lock-alt' ></i>
             </div>
 
-            <div class="remember-container">
-                <input type="checkbox" id="remember-me" name="remember-me">
-                <label for="remember-me">Permanecer Conectado</label>
+            <div class="conectado-esqueceu">
+                <label><input type="checkbox" id="check">Permanecer conectado?</label>
+                <a href="#">Esqueceu a senha?</a>
             </div>
-
-            <button type="submit">Entrar</button>
-        </form>
+            <button type="submit" id="login-button" class="btn">Entrar</button>
+            <div class="problemas">
+                <p>Problemas para acessar sua conta? <br> <a href="#"><span>Suporte</span></a></p>
+            </div>
+        </form>   
     </div>
-    <script src="script.js"></script>
-    <script src="crude.js"></script>
-    <script src="database.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
