organizando as pastas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
             </div>
         </form>   
     </div>
-    <script src="../js/script.js"></script>
+    <script src="./Scripts/script.js"></script>
 </body>
 </html>
