Crude de controle de estoque

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="problemas">
                 <p>Problemas para acessar sua conta? <br> <a href="#"><span>Suporte</span></a></p>
             </div>
+            <a href="crude.html">aqui</a>
         </form>   
     </div>
     <script src="./Scripts/script.js"></script>
