--- a/crude.html
+++ b/crude.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro | Controle de estoque</title>
+    <title>Controle de Estoque</title>
 </head>
 <body>
-    
+    <h1>Controle de Estoque</h1>
+
+    <!-- Formulário para adicionar ou atualizar produtos -->
+    <div>
+        <h2>Adicionar/Atualizar Produto</h2>
+        <label for="nome">Nome do Produto:</label>
+        <input type="text" id="nome"><br><br>
+
+        <label for="valor">Valor:</label>
+        <input type="number" id="valor"><br><br>
+
+        <label for="quantidade">Quantidade:</label>
+        <input type="number" id="quantidade"><br><br>
+
+        <button onclick="addProduct()">Adicionar Produto</button>
+        <button onclick="updateProduct()">Atualizar Produto</button>
+    </div>
+
+    <hr>
+
+    <!-- Botão para visualizar produtos -->
+    <h2>Ver Produtos</h2>
+    <button onclick="seeProducts()">Ver Produtos</button>
+
+    <!-- Área onde os produtos serão exibidos -->
+    <div id="productList"></div>
+
+    <hr>
+
+    <!-- Formulário para deletar produto -->
+    <div>
+        <h2>Deletar Produto</h2>
+        <label for="deleteNome">Nome do Produto:</label>
+        <input type="text" id="deleteNome"><br><br>
+        <button onclick="deleteProduct()">Deletar Produto</button>
+    </div>
+
+    <a href="index.html">Voltar para a tela de login</a>
+
+    <!-- Conectando o JavaScript -->
+    <script src="./Scripts/crude.js"></script>
 </body>
 </html>
