crude finalizado na parte do back-end

--- a/crude.html
+++ b/crude.html
@@ -59,11 +59,11 @@
 
     <!-- turorial de como quebrar o codigo -->
     <div id="productPopup" class="popup">
-        <!-- <div class="popup-content">
+       <div class="popup-content">
             <span class="close" onclick="closePopup()">&times;</span>
             <h2>Detalhes do Produto</h2>
             <div id="popupProductDetails"></div>
-        </div> -->
+        </div> 
         <div class="popup-content">
             <h2>Adicionar/Atualizar Produto</h2>
             <label for="nome">Nome do Produto:</label>
