--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <h1>Olá, <span id="user-name">João</span>!</h1>
         <div class="options-container">
             <button class="option-btn" onclick="handleOptionClick('Controle de Produção')">Controle de Produção</button>
-            <button class="option-btn" onclick="handleOptionClick('Controle de Estoque')">Controle de Estoque</button>
+            <button class="option-btn" onclick="redirectToCrude()">Controle de Estoque</button>
             <button class="option-btn" onclick="handleOptionClick('Dossiê Produtos')">Dossiê Produtos</button>
             <button class="option-btn" onclick="handleOptionClick('Manutenção Sistema')">Manutenção Sistema</button>
         </div>
