--- a/home.html
+++ b/home.html
@@ -14,11 +14,11 @@
     </div>
 
     <div class="dashboard-container">
-        <h1>Olá, <span id="user-name">João</span>!</h1>
+        <h1>Olá, <span id="user-name"></span>!</h1>
         <div class="options-container">
             <button class="option-btn" onclick="handleOptionClick('Controle de Produção')">Controle de Produção</button>
             <button class="option-btn" onclick="redirectToCrude()">Controle de Estoque</button>
-            <button class="option-btn" onclick="handleOptionClick('Dossiê Produtos')">Dossiê Produtos</button>
+            <button class="option-btn" onclick="redirectToCrude()">Dossiê Produtos</button>
             <button class="option-btn" onclick="handleOptionClick('Manutenção Sistema')">Manutenção Sistema</button>
         </div>
     </div>
